# SFO_CPP

./: .bazelrc  .gitignore  BUILD.bazel  CMakeLists.txt  MODULE.bazel  README.md  WORKSPACE  package.xml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: run_tests.yml
include/SFO_CPP/: bidirectional_greedy.hpp  lazier_than_lazy_greedy.hpp  lazy_greedy.hpp  linear_unconstrained_greedy.hpp  stochastic_greedy.hpp  vanilla_greedy.hpp
include/SFO_CPP/SFO_core/: constraint.hpp  cost_function.hpp  element.hpp
include/SFO_CPP/monotone_algs/: lazier_than_lazy_greedy.hpp  lazy_greedy.hpp  stochastic_greedy.hpp  vanilla_greedy.hpp
include/SFO_CPP/non_monotone_algs/: apx_local_search.hpp  bidirectional_greedy.hpp
include/sfo_cpp/optimizers/monotone/: lazier_than_lazy_greedy.hpp  lazy_greedy.hpp  stochastic_greedy.hpp  vanilla_greedy.hpp
include/sfo_cpp/optimizers/non_monotone/: apx_local_search.hpp  bidirectional_greedy.hpp
include/sfo_cpp/sfo_concepts/: constraint.hpp  cost_function.hpp  element.hpp
sfo_cpp/optimizers/monotone/: lazier_than_lazy_greedy.hpp  lazy_greedy.hpp  stochastic_greedy.hpp  vanilla_greedy.hpp
sfo_cpp/optimizers/non_monotone/: apx_local_search.hpp  bidirectional_greedy.hpp
sfo_cpp/sfo_concepts/: constraint.hpp  cost_function.hpp  element.hpp
sfo_cpp/tests/: BUILD.bazel  test_monotone_greedy.cpp  test_non_monotone_greedy.cpp  test_non_monotone_greedy_gtest.cpp
sfo_cpp/tests/test_utils/: demo_element.hpp  test_fixtures.hpp
src/: a.out  constraint.hpp  cost_function.hpp  element.hpp  lazy_greedy.hpp  stochastic_greedy.hpp  test_greedy.cpp  vanilla_greedy.hpp
tests/: BUILD.bazel  CMakeLists.txt  test_greedy.cpp  test_monotone_greedy.cpp  test_monotone_greedy_gtest.cpp  test_non_monotone_greedy.cpp
