cc_library(
    name = "sfo_cpp",
    hdrs= glob(["include/**/*.hpp"]),
    includes = ["include"],
    visibility = [
        "//visibility:public",
    ]
)

cc_binary(
    name = "test_monotone",
    srcs = ["tests/test_monotone_greedy.cpp"],
    deps = [
        ":sfo_cpp"
    ],
    copts = ["/std:c++17"]
)

cc_binary(
    name = "test_non_monotone",
    srcs = ["tests/test_non_monotone_greedy.cpp"],
    deps = [
        ":sfo_cpp"
    ],
    copts = ["/std:c++17"]
)