cc_library(
    name = "sfo_cpp",
    hdrs = glob(["sfo_cpp/**/*.hpp"]),
    copts = ["-std=c++17"],  # un-comment for *nix
    # copts = ["/std:c++17"],  # un-comment for windows
    includes = ["include"],
    visibility = [
        "//visibility:public",
    ],
)

[
    cc_test(
        name = src[:-len(".cpp")],
        size = "small",
        srcs = [src],
        args = ["--gtest_output"],
        copts = ["-std=c++17"],  # un-comment for *nix
        # copts = ["/std:c++17"],  # un-comment for windows
        deps = [
            "//:sfo_cpp",
            "@googletest//:gtest_main",
        ],
    )
    for src in glob(["sfo_cpp/tests/test_*.cpp"])
]
